<?xml version="1.0"?>
<package format="2">
  <name>rs_v4r_ActionServer</name>
  <version>0.0.0</version>
  <description>The hsr_perception package</description>

  <maintainer email="hassouna@uni-bremen.de">Vanessa Hassouna</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robosherlock</build_depend>
  <exec_depend>robosherlock</exec_depend>
  <build_depend>rs_v4r</build_depend>
  <exec_depend>rs_v4r</exec_depend>
  <build_depend>suturo_perception_msgs</build_depend>
  <exec_depend>suturo_perception_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
